--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<h2>Lab 1</h2>
 								<a href="images/fulls/placeholder.png" class="image fit thumb"><img src="images/thumbs/placeholder_thumb.png" alt="" /></a>
-								<h3>Arcata Marsh Mural</h3>
-								<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+								<h3>Oil Spilled, Accidentally</h3>
+								<p>Didn't want to show the same amount of oil spilled like most, so I thought I'd be a bit creative and use words from the attributes describing the incident. <a href="images/fulls/placeholder.png" download>Download Image</a>
 								</p>
 							</article>
 							
