--- a/form.html
+++ b/form.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name = "viewport" content = "width = device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;">		
+<meta name = "viewport" content = "width = device-width; initial-scale=1.0, maximum-scale=1.0, user-scalable=no,">		
 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src="js/geo.js" type="text/javascript" charset="utf-8"></script>
