--- a/form.html
+++ b/form.html
@@ -70,7 +70,7 @@ function show_position(p)
    	
 </style>
 </head>
-<body onload="initialize_map();initialize()">
+<body onload="initialize_map();initialize();">
 
       <!-- // Big title -->
 <div class="py-5">
